@@ -12,7 +12,7 @@
 # Afterwards, load the file with command-line 
 # option -init-file <your_init_file>
 #
-# $Id: texi2html.init,v 1.173 2009-01-01 22:35:10 pertusus Exp $
+# $Id: texi2html.init,v 1.174 2009-01-07 00:36:41 pertusus Exp $
 
 ######################################################################
 # The following variables can also be set by command-line options
@@ -2158,8 +2158,8 @@ $pre_map{'enddots'} = '...';
                'ss'           => 'ss',
                'l'            => '/l',
                'L'            => '/L',
-               'exclamdown'   => '?',
-               'questiondown' => '!',
+               'exclamdown'   => '!',
+               'questiondown' => '?',
                'pounds'       => '#',
                'ordf'         => 'a',
                'ordm'         => 'o',
